# curve-design

./: CMakeLists.txt  default.cmake
build-qt5-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  framework.cbp
build-qt5-debug/src/: Makefile  cmake_install.cmake
build-qt5-debug/src/GUI-qt/: Makefile  cmake_install.cmake
build-qt5-debug/src/UI_op/: Makefile  cmake_install.cmake
build-qt5-debug/src/alg/: Makefile  cmake_install.cmake
build-qt5-debug/src/app/: Makefile  cmake_install.cmake
build-qt5-debug/src/globals/: Makefile  cmake_install.cmake
build-qt5-debug/src/qt_platform/: Makefile  cmake_install.cmake  moc_qt_mainwindow.cpp
build-qt5-debug/src/working_space/: Makefile  cmake_install.cmake
build-qt5-debug/src/working_space_render/: Makefile  cmake_install.cmake
build-qt5-release/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  framework.cbp
build-qt5-release/src/: Makefile  cmake_install.cmake
build-qt5-release/src/GUI-qt/: Makefile  cmake_install.cmake
build-qt5-release/src/UI_op/: Makefile  cmake_install.cmake
build-qt5-release/src/alg/: Makefile  cmake_install.cmake
build-qt5-release/src/app/: Makefile  cmake_install.cmake
build-qt5-release/src/globals/: Makefile  cmake_install.cmake
build-qt5-release/src/qt_platform/: Makefile  cmake_install.cmake  moc_cmenu.cpp  moc_qevent_adapter.cpp  moc_qt_osgwidget.cpp  moc_qt_osgwidget2d.cpp  qt_platform_automoc.cpp
build-qt5-release/src/working_space/: Makefile  cmake_install.cmake
build-qt5-release/src/working_space_render/: Makefile  cmake_install.cmake
build-test-qt5-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  framework-test.cbp
build-test-qt5-debug/A/: Makefile  cmake_install.cmake
build-test-qt5-debug/alg/: Makefile
build-test-qt5-debug/globals/: Makefile
res/: config.xml
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/GUI-qt/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/UI_op/: CMakeLists.txt  Makefile  common_procedure.cpp  common_procedure.h  conf.h  curve_operand_helper.cpp  curve_operand_helper.h  event_interface.h  finite_state_machine.h  fsm.cpp  fsm.h  state_run.cpp  state_run.h  state_select_vertex.cpp  state_select_vertex.h  ui_handler.cpp  ui_handler.h
src/alg/: CMakeLists.txt  CurveGenerator.cpp  CurveGenerator.h  CurveGenerator2.cpp  CurveGenerator2.h  GeodesicGenerator.cpp  GeodesicGenerator.h  Makefile  Mesh.cpp  Mesh.h  cmake_install.cmake  conf.h  curve_interp.cpp  curve_interp.h  projection.cpp  projection.h
src/app/: CMakeLists.txt  Makefile  app.cpp  app.h  cmake_install.cmake  conf.h
src/common/: color.h  osg_util.h  platform.h  rot_util.h  util.h
src/globals/: CMakeLists.txt  GlobalData.cpp  GlobalData.h  Makefile  debug_util.h  geometry.cpp  globals.cpp  globals.h  user_guide.h
src/qt_platform/: CMakeLists.txt  Makefile  cmenu.cpp  cmenu.h  conf.h  customize_trackballmanipulator.h  mystring.h  osg_tools.cpp  osg_tools.h  osg_utils.cpp  osg_utils.h  platform.h  qevent_adapter.cpp  qevent_adapter.h  qt_mainwindow.cpp  qt_mainwindow.h  qt_osgwidget.cpp  qt_osgwidget.h  qt_osgwidget2d.cpp  qt_osgwidget2d.h  qt_wnd_server.cpp  qt_wnd_server.h
src/working_space/: CMakeLists.txt  Makefile  conf.h  data_tree.cpp  data_tree.h  def_ctrl.cpp  def_ctrl.h  line.cpp  line.h  locked_shared_ptr.h  mesh.cpp  mesh.h  message_queue.cpp  message_queue.h  model.h  singleton.h  sphere.cpp  sphere.h  trimesh.cpp  trimesh.h  working_space.cpp  working_space.h
src/working_space_render/: CMakeLists.txt  Makefile  cmake_install.cmake  conf.h  def_ctrl_render.cpp  def_ctrl_render.h  line_render.cpp  line_render.h  mesh_render.h  scene_view.cpp  scene_view.h  sphere_render.cpp  sphere_render.h  tri_mesh_render.h  trimesh_render.cpp  trimesh_render.h
test/: CMakeLists.txt  main.cpp
